plugins {
  id "io.spring.dependency-management" version "1.0.7.RELEASE"
}

group 'org.febit.wit'
version '2.8.0-SNAPSHOT'

ext {
  versions = [
      slf4j         : '1.7.25',
      commonsLogging: '1.1',
      servletApi    : '2.5',
      junit         : '4.11',
      alibabaP3cPmd : '1.3.6',
  ]
}

subprojects {

  group rootProject.group
  version rootProject.version

  apply plugin: 'java'
  apply plugin: 'idea'
  apply plugin: 'eclipse'
  apply plugin: 'io.spring.dependency-management'

  apply from: "${rootDir}/gradle/publish-maven.gradle"

  sourceCompatibility = 1.8
  targetCompatibility = 1.8

  repositories {
    mavenCentral()
  }

  tasks.withType(Test) {
    testLogging.events = ["FAILED", "PASSED", "SKIPPED", "STANDARD_OUT", "STANDARD_ERROR"]
  }

  tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
    options.debug = true
    options.compilerArgs << "-Xlint:unchecked"
    options.compilerArgs << "-Xlint:deprecation"
  }

  tasks.withType(Javadoc) {
    options.encoding = 'UTF-8'
    options.addStringOption('Xdoclint:none', '-quiet')
  }

  dependencyManagement {
    dependencies {
      dependencySet(group: 'org.slf4j', version: "${versions.slf4j}") {
        entry 'slf4j-api'
        entry 'slf4j-simple'
      }
      dependency "commons-logging:commons-logging-api:${versions.commonsLogging}"
      dependency "javax.servlet:servlet-api:${versions.servletApi}"
      dependency "junit:junit:${versions.junit}"
      dependency "com.alibaba.p3c:p3c-pmd:${versions.alibabaP3cPmd}"
    }
  }

  dependencies {
    testCompile 'junit:junit'
    testCompile 'org.slf4j:slf4j-simple'
  }
}

wrapper {
  gradleVersion = '5.4.1'
}
